tests/ui/parser/misspelled-keywords/const-generics.rs
fn foo<consta N: usize>(_arr: [i32; N]) {}
//~^ ERROR expected one of

fn main() {}
